@@ -19,8 +19,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ****/
 
 #pragma once
-#include <stdlib.h>
-#include <exception>
 #include "../memory/alignment.h"
 
 template<typename _t>
@@ -39,8 +37,6 @@ struct MemBuffer {
 		size_(n),
 		alloc_size_(n)
 	{
-		if (data_ == nullptr)
-			throw std::bad_alloc();
 	}
 
 	~MemBuffer() {
@@ -51,8 +47,6 @@ struct MemBuffer {
 		if (alloc_size_ < n) {
 			aligned_free(data_);
 			data_ = (_t*)aligned_malloc(n * sizeof(_t), ALIGN);
-			if (data_ == nullptr)
-				throw std::bad_alloc();
 			alloc_size_ = n;
 		}
 		size_ = n;
